v5.7.1
- Updated - core/archives type attribute
- Updated - core/latest-posts featured image alignment
- Updated - core/search query params output and styles extension ouput
- Added - Fragment cache for WooCommerce Mini Cart block (which changed the fragments loading on mouseover instead of page load) for LiteSpeed
- Fixed - Captcha4WP comment hooks and class name change after was bought (ANR plugin)
- Fixed - core/comments-title text alignment class
- Added - Google Fonts API with Open Sans and Shadows Into Light as default fonts (temporary until Google Fonts Provider is added to WP)

v5.7.0
- Removed - align{left/center/right/none} styles (as they were added in core)
- Updated - core/social-links styles regarding .nav-bar margin
- Updated - core/latest-posts and core/latest-comments template filter now takes a string as 1st argument (without parse_blocks)
- Updated - single.html template comments markup: remove group and rename core/comments-query-loop to core/comments
- Updated - core/navigation disable view_script_handles (we use Bootstraps's offcanvas and Navigation js)
- Updated - core/latest-comments remove background from comment content (works better on dark style)
- Fixed - A bug with spacing margin/padding generation when all paddings are equal but not on all dirrections
- Fixed - core/post-template issue with double css-# classes in wrapper (from Styles Gutenberg Extension)
- Fixed - core/comment-template issue with double css-# classes in wrapper (from Styles Gutenberg Extension)
- Added - core/post-template $args as 3rd parameter to template filter and new filter for Query Template - wecodeart/filter/gutenberg/latest-posts/query
- Added - core/comment-template support for threaded comments

v5.6.9
- Removed - core/pullquote redundant is-style-solid CSS rules and extra attributes processor
- Updated - Offcanvas menu label support